[Client, MasterServer] `클라이언트 버전 체크` 기능 구현

--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions\Functions.cs" />
     <Compile Include="Functions\InIReader.cs" />
     <Compile Include="Networks\ClientPackets.cs" />
     <Compile Include="Networks\FixedSizedQueue.cs" />
