[Client] `로그인폼` 업데이트 - 레이아웃 구성

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -142,5 +142,8 @@
   <ItemGroup>
     <None Include="Resources\Icon_Withus.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Brand_Withus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
