--- a/WithusUI/WithusUI.csproj
+++ b/WithusUI/WithusUI.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Controls\Buttons\WButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\Labels\WLinkLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\TextBoxs\WTextBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
