`EmailValidator` 추가 - 허용 도메인 일부 추가

--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Functions\Functions.cs" />
     <Compile Include="Functions\InIReader.cs" />
+    <Compile Include="Helpers\EmailValidator.cs" />
     <Compile Include="Networks\ClientPackets.cs" />
     <Compile Include="Networks\FixedSizedQueue.cs" />
     <Compile Include="Networks\Packet.cs" />
